CustomObjects/objects/invoiceit_s__Invoice_Run__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Stores the details of how many Invoices generated,how many Accounts processed &amp; Credit Notes generated.</description>
    <fields>
        <fullName>invoiceit_s__Accounts_Processed__c</fullName>
        <description>Number of Accounts processed by this run</description>
        <label>Accounts Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Completed_Time__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CreditNotes_Generated__c</fullName>
        <description>Number of Credit Notes generated by this run.</description>
        <label>Obsolete_CreditNotes Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Run_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scheduler</label>
        <referenceTo>invoiceit_s__Invoice_RunScheduler__c</referenceTo>
        <relationshipLabel>Invoice Run</relationshipLabel>
        <relationshipName>Invoice_Run_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoices_Generated__c</fullName>
        <label>Invoices Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Jobs_Processed__c</fullName>
        <label>Orders Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Target_Run_Date__c</fullName>
        <label>Target Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Invoice_Value__c</fullName>
        <label>Total Invoice Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Run</label>
    <listViews>
        <fullName>invoiceit_s__All_Invoice_Runs</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Accounts_Processed__c</columns>
        <columns>invoiceit_s__Jobs_Processed__c</columns>
        <columns>invoiceit_s__Invoices_Generated__c</columns>
        <columns>invoiceit_s__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice Runs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>